# c0nscanner

./: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.py
c0nscanner/: __init__.py  __main__.py  cli.py  config.py
c0nscanner/core/: __init__.py  auth.py  http_engine.py  scanner.py  target.py
c0nscanner/payloads/: __init__.py  cmdi.txt  dirs_common.txt  lfi.txt  sqli.txt  xss.txt
c0nscanner/plugins/: __init__.py  base.py  cmdi.py  cors.py  csrf.py  direnum.py  headers.py  infodisclosure.py  lfi.py  openredirect.py  sqli.py  ssrf.py  xss.py
c0nscanner/reporters/: __init__.py  base.py  html_reporter.py  json_reporter.py  text_reporter.py
c0nscanner/utils/: __init__.py  colors.py  helpers.py  logger.py
config/: default.yaml
